--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/royal_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/royal_headsets.yml
@@ -1,12 +1,4 @@
-﻿- type: radioChannel
-  id: RoyalMarines
-  name: chat-radio-royal-marine
-  keycode: "q"
-  frequency: 1551
-  color: "#e1580e"
-  longRange: true
-
-- type: entity
+﻿- type: entity
   parent: RMCHeadsetShip
   id: RMCHeadsetRoyalMarine
   name: royal marine headset
