--- a/Resources/Prototypes/_RMC14/radio_channels.yml
+++ b/Resources/Prototypes/_RMC14/radio_channels.yml
@@ -183,6 +183,15 @@
   tower: true
 
 - type: radioChannel
+  id: RoyalMarines
+  name: chat-radio-royal-marine
+  keycode: "q"
+  frequency: 1551
+  color: "#e1580e"
+  longRange: true
+  tower: true
+
+- type: radioChannel
   id: Hivemind
   name: chat-radio-hivemind
   keycode: "h"
