--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/royal_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/royal_headsets.yml
@@ -25,6 +25,6 @@
     - MarineCommand
     - MarineCommon
     - RoyalMarines
-    defaultChannel: TSE
+    defaultChannel: RoyalMarines
   - type: Sprite
     state: sl_key
