change job names and fixes

--- a/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/rmc_id_royal.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/rmc_id_royal.yml
@@ -4,7 +4,7 @@
   - type: IFFFaction
   - type: FactionFrequencies
     channels:
-    - TSE
+    - RoyalMarine
 
 - type: entity
   parent: CMIDCardStandardDogtag
