--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/TSE/TSEPA/tsepa_senior_constable.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/TSE/TSEPA/tsepa_senior_constable.yml
@@ -1,14 +1,14 @@
-# TSEPA Chief Marshal
+# TSEPA Senior Constable
 - type: job
   parent: CMJobBase
-  id: RMCTSEPAChiefMarshal
-  name: rmc-job-name-tsepa-chief-marshal
-  description: rmc-job-description-tsepa-chief-marshal
-  playTimeTracker: RMCJobTSEPAChiefMarshal
+  id: RMCTSEPASeniorConstable
+  name: rmc-job-name-tsepa-senior-constable
+  description: rmc-job-description-tsepa-senior-constable
+  playTimeTracker: RMCJobTSEPASeniorConstable
   ranks:
-    RMCRankTSESecondLieutenant: []
-  startingGear: RMCGearTSEPAChiefMarshal
-  icon: "RMCJobIconTSEPAChiefMarshal"
+    RMCRankTSEPASeniorConstable: []
+  startingGear: RMCGearTSEPASeniorConstable
+  icon: "RMCJobIconTSEPASeniorConstable"
   joinNotifyCrew: false
   accessGroups:
   - ColonistSec
@@ -18,32 +18,28 @@
     - type: Skills
       skills:
         RMCSkillEngineer: 1
-        RMCSkillMeleeWeapons: 1
+        RMCSkillMeleeWeapons: 2
         RMCSkillConstruction: 1
-        RMCSkillMedical: 2
-        RMCSkillEndurance: 3
-        RMCSkillCqc: 3
+        RMCSkillMedical: 1
+        RMCSkillEndurance: 2
+        RMCSkillCqc: 2
         RMCSkillFirearms: 2
         RMCSkillPolice: 0
         RMCSkillFireman: 2
-        RMCSkillLeadership: 2
-    - type: MarineOrders
     - type: NpcFactionMember
       factions:
       - TSE
-    - type: RMCPointing
-    - type: CommandAccent
     - type: JobPrefix
-      prefix: rmc-job-prefix-tsepa-chief-marshal
+      prefix: rmc-job-prefix-tsepa-senior-constable
   hidden: true
 
 - type: startingGear
-  id: RMCGearTSEPAChiefMarshal
+  id: RMCGearTSEPASeniorConstable
   equipment:
     head: RMCHeadBeretTSEPA
     ears: RMCHeadsetTSEPA
     jumpsuit: RMCJumpsuitTSEPA
-    outerClothing: RMCArmourM4TSEPAChief
+    outerClothing: RMCArmourM4TSEPA
     gloves: RMCHandsVeteran
     shoes: CMBootsBlackFilled
     suitstorage: WeaponRifleL83A2
@@ -58,25 +54,25 @@
 
 - type: entity
   parent: CMSpawnPointJobBase
-  id: RMCSpawnPointTSEPAChiefMarshal
-  name: tsepa chief marshal spawn point
+  id: RMCSpawnPointTSEPASeniorConstable
+  name: tsepa senior constable spawn point
   components:
   - type: SpawnPoint
-    job_id: RMCTSEPAChiefMarshal
+    job_id: RMCTSEPASeniorConstable
   - type: Sprite
     layers:
     - sprite: Markers/jobs.rsi
       state: green
-    - sprite: _RMC14/Objects/Clothing/OuterClothing/CMB/cmb_sheriff_armor.rsi
+    - sprite: _RMC14/Objects/Clothing/OuterClothing/CMB/cmb_light_armor.rsi
       state: icon
 
 - type: playTimeTracker
-  id: RMCJobTSEPAChiefMarshal
+  id: RMCJobTSEPASeniorConstable
   isHumanoid: true
 
 - type: jobIcon
   parent: CMJobIconBase
-  id: RMCJobIconTSEPAChiefMarshal
+  id: RMCJobIconTSEPASeniorConstable
   icon:
     sprite: _RMC14/Interface/cm_job_icons.rsi
-    state: tse_pachief
+    state: tse_paseniorconstable
