--- a/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/tse.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/tse.yml
@@ -18,7 +18,7 @@
 - type: entity
   parent: RMCBaseMarineArmorLight
   id: RMCArmourM4TSEPAChief
-  name: M4 pattern chief marshal TSEPA armour
+  name: M4 pattern inspector TSEPA armour
   description: A modified variant of the M4 TSEPA armour to have the additional riot plating returned, feauturing a golden insignia on the chestplate.
   components:
   - type: Sprite
