--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/TSE/TSEPA/tsepa_inspector.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/TSE/TSEPA/tsepa_inspector.yml
@@ -54,7 +54,7 @@
     back:
     - RMCMagazineRifleL83A2
     - RMCMagazineRifleL83A2
-    - RMCMagazineRifleL83A2
+    - RMCMagazineRifleL83A2AP
 
 - type: entity
   parent: CMSpawnPointJobBase
