--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
@@ -10,6 +10,19 @@
       key_slots:
       - CMEncryptionKeyColony
 
+# For CLF
+
+- type: entity
+  parent: RMCHeadsetIconsCLF
+  id: RMCHeadsetDistressCLF
+  name: CLF headset
+  description: A special headset used by small groups of trained operatives. Or terrorists.
+  components:
+  - type: ContainerFill
+    containers:
+      key_slots:
+      - CMEncryptionKeyColony
+
 # For Bureau Marshals
 - type: entity
   parent: RMCHeadsetIconsCMB
