--- a/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/rmc_id_clf.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/rmc_id_clf.yml
@@ -24,6 +24,14 @@
 
 - type: entity
   parent: CMIDCardBase
+  id: RMCIDCardCLFMedic
+  name: clf specialists's ID card
+  components:
+  - type: PresetIdCard
+    job: RMCCLFSpecialist
+
+- type: entity
+  parent: CMIDCardBase
   id: RMCIDCardCLFCellCommander
   name: clf cell commander's ID card
   components:
