--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Squad/specialist.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Squad/specialist.yml
@@ -22,17 +22,49 @@
       sharedSpecLimit: 2 # 2 as requested until Pyro is added
       entries:
       - id: RMCDemoSpecEquipmentCase
+        giveSquadRoleName: rmc-job-name-weapons-specialist-demo
+        isAppendTitle: true
+        giveIcon:
+          sprite: _RMC14/Interface/cm_job_icons.rsi
+          state: hudsquad_spec_demo
+        giveMapBlip:
+          sprite: _RMC14/Interface/map_blips.rsi
+          state: spec_demo
       - id: RMCGrenadeSpecEquipmentCase
+        giveSquadRoleName: rmc-job-name-weapons-specialist-grenadier
+        isAppendTitle: true
+        giveIcon:
+          sprite: _RMC14/Interface/cm_job_icons.rsi
+          state: hudsquad_spec_grenadier
+        giveMapBlip:
+          sprite: _RMC14/Interface/map_blips.rsi
+          state: spec_grenadier
       #  points: 0
       #- id: PyroSet
       #  points: 0
+      # Don't forget to give Pyro his own role name and icons
       - id: RMCScoutSpecEquipmentCase
       - id: CMSniperEquipmentCase
+        giveSquadRoleName: rmc-job-name-weapons-specialist-sniper
+        isAppendTitle: true
+        giveIcon:
+          sprite: _RMC14/Interface/cm_job_icons.rsi
+          state: hudsquad_spec_sniper
+        giveMapBlip:
+          sprite: _RMC14/Interface/map_blips.rsi
+          state: spec_sniper
         linkedEntries:
         - RMCAntiMaterielEquipmentCase
       - id: RMCAntiMaterielEquipmentCase
+        giveSquadRoleName: rmc-job-name-weapons-specialist-anti-materiel-sniper
+        isAppendTitle: true
+        giveIcon:
+          sprite: _RMC14/Interface/cm_job_icons.rsi
+          state: hudsquad_spec_anti_materiel_sniper
+        giveMapBlip:
+          sprite: _RMC14/Interface/map_blips.rsi
+          state: spec_anti_materiel_sniper
         linkedEntries:
-        - CMSniperEquipmentCase
     - name: Extra Scout Ammunition
       entries:
       - id: RMCMagazineRifleM4SPRA19Impact
