--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Corpses/civilians.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Corpses/civilians.yml
@@ -340,3 +340,53 @@
     head: RMCArmorHelmetPMCKutjevoSecurity
     jumpsuit: RMCJumpsuitVeteranPMCKutjevo
     eyes: RMCGogglesKutjevo
+
+# We-Ya PMC
+- type: randomHumanoidSettings
+  parent: RMCCorpse
+  id: RMCCorpseWeYaPMCStandard
+  components:
+  - type: Loadout
+    prototypes: [ RMCGearCorpseWeYaPMCStandard ]
+
+- type: startingGear
+  id: RMCGearCorpseWeYaPMCStandard # TODO RMC14 gasmask, lightpack, 50% chance to have bulletproof armor variant and black cap
+  equipment:
+    head: ArmorHelmetPMC
+    jumpsuit: RMCJumpsuitVeteranPMC
+    outerClothing: CMArmorM4PMCLight
+    belt: CMM77BeltFilled
+    back: RMCSatchelLightpack
+    gloves: RMCHandsVeteran
+    shoes: RMCBootsPMCFilled
+    mask: RMCMaskBalaclava
+    id: RMCIDCardPMC
+    ears: RMCHeadsetDistressWeYaColony
+    pocket1: RMCPouchFirstAidPMCFill
+    pocket2: RMCPouchToolsFill
+  storage:
+    back:
+    - RMCRadioHandheldColonyOff
+
+# Corporate Supervisor
+- type: randomHumanoidSettings
+  parent: RMCCorpse
+  id: RMCCorpseWeYaManager
+  components:
+  - type: Loadout
+    prototypes: [ RMCGearCorpseWeYaManager ]
+
+- type: startingGear
+  id: RMCGearCorpseWeYaManager # TODO RMC14 manager jacket, jumpsuit and hat, lockable satchel
+  equipment:
+    ears: RMCHeadsetDistressWeYaColony
+    back: CMSatchel
+    jumpsuit: CMJumpsuitLiaisonBlack
+    outerClothing: RMCJacketCorporateBlack
+    belt: RMCMK80BeltFilled
+    shoes: RMCShoesLaceup
+    id: RMCIDCardExecutiveCorporateSupervisor
+    pocket2: RMCPouchToolsFill
+  storage:
+    back:
+    - RMCRadioHandheldColonyOff
