--- a/Resources/Prototypes/_RMC14/Entities/Markers/Spawners/Corpses/civilians.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Markers/Spawners/Corpses/civilians.yml
@@ -127,3 +127,19 @@
   components:
   - type: CorpseSpawner
     spawn: RMCCorpseWeYaGoonKutjevo
+
+- type: entity
+  parent: RMCSpawnerCorpse
+  id: RMCSpawnerCorpseWeYaPMC
+  name: Corpse Spawner - We-Ya PMC Standard
+  components:
+  - type: CorpseSpawner
+    spawn: RMCCorpseWeYaPMCStandard
+
+- type: entity
+  parent: RMCSpawnerCorpse
+  id: RMCSpawnerCorpseWeYaManager
+  name: Corpse Spawner - Corporate Supervisor
+  components:
+  - type: CorpseSpawner
+    spawn: RMCCorpseWeYaManager
