--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Rifles/ssg45.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Rifles/ssg45.yml
@@ -30,6 +30,8 @@
     soundGunshot:
       collection: RMCSSG45Shoot
     shotsPerBurst: 3
+  - type: GunDamageModifier
+    multiplier: 1.25
   - type: RMCSelectiveFire
     baseFireModes:
     - SemiAuto
