more name fixes
Co-authored-by: DrSmugleaf <10968691+DrSmugleaf@users.noreply.github.com>

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/sentry.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/sentry.yml
@@ -192,7 +192,7 @@
 - type: entity
   parent: RMCBaseBullet
   id: RMCBulletSentryFireProjectileSmoke
-  name: Flaming Ball Smoke
+  name: flaming ball smoke
   description: Huh? You shouldn't be able to see this...
   categories: [ HideSpawnMenu ]
   components:
