--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/sentry.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/sentry.yml
@@ -47,7 +47,7 @@
 - type: entity
   parent: RMCBaseBullet
   id: RMCBulletSentryFireProjectile
-  name: Flaming Ball
+  name: flaming ball
   description: Huh? You shouldn't be able to see this...
   categories: [ HideSpawnMenu ]
   components:
