lower case names pt2
Co-authored-by: DrSmugleaf <10968691+DrSmugleaf@users.noreply.github.com>

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/sentry.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/sentry.yml
@@ -92,7 +92,7 @@
 - type: entity
   parent: RMCBaseBullet
   id: RMCBulletSentryFireProjectileBlue
-  name: Flaming Ball Blue
+  name: flaming ball blue
   description: Huh? You shouldn't be able to see this...
   categories: [ HideSpawnMenu ]
   components:
