--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/defender.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/defender.yml
@@ -139,7 +139,6 @@
     - ActionXenoSoak
     - ActionXenoFortifySteelcrest
     - ActionXenoDevolve
-    hidden: true
   - type: XenoStrain
     name: rmc-xeno-steelcrest-name
     description: rmc-xeno-steelcrest-description
@@ -166,4 +165,5 @@
       types:
         Blunt: 37.5
   - type: XenoSoak
+  - type: XenoHidden
 
