--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/hivelord.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/hivelord.yml
@@ -163,7 +163,6 @@
     - ActionXenoTransferPlasmaHivelord
     - ActionXenoResinWalker
     - ActionXenoDevolve
-    hidden: true
   - type: XenoConstruction
     buildDelay: 1
     canBuild:
@@ -190,5 +189,6 @@
     name: rmc-xeno-resin-whisperer-name
     description: rmc-xeno-resin-whisperer-description
     popup: rmc-xeno-resin-whisperer-popup
+  - type: XenoHidden
 
 
