--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/praetorian.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/praetorian.yml
@@ -166,7 +166,6 @@
     - ActionXenoFightOrFlight
     - ActionXenoRetrieve
     - ActionXenoDevolve
-    hidden: true
   - type: XenoStrain
     name: rmc-xeno-valkyrie-name
     description: rmc-xeno-valkyrie-description
@@ -213,6 +212,7 @@
     - type: RMCRooted
     - type: RMCDazed
   - type: XenoHighGallop
+  - type: XenoHidden
 
 - type: entity
   parent: CMXenoPraetorianBase
@@ -231,7 +231,6 @@
     - ActionXenoDodge
     - ActionXenoTailTrip
     - ActionXenoDevolve
-    hidden: true
   - type: XenoStrain
     name: rmc-xeno-dancer-name
     description: rmc-xeno-dancer-description
@@ -248,6 +247,7 @@
       groups:
         Brute: 40
   - type: XenoTailTrip
+  - type: XenoHidden
 
 - type: entity
   parent: CMXenoPraetorianBase
@@ -272,7 +272,6 @@
     - ActionXenoCleaveRoot
     - ActionXenoCleaveFling
     - ActionXenoDevolve
-    hidden: true
   - type: XenoStrain
     name: rmc-xeno-vanguard-name
     description: rmc-xeno-vanguard-description
@@ -296,6 +295,7 @@
       groups:
         Brute: 40
   - type: XenoCleave
+  - type: XenoHidden
 
 - type: entity
   parent: CMXenoPraetorianBase
@@ -314,7 +314,6 @@
     - ActionXenoDislocate
     - ActionXenoTailLash
     - ActionXenoDevolve
-    hidden: true
   - type: MeleeWeapon
     damage:
       groups:
@@ -359,3 +358,4 @@
     damage:
       groups:
         Brute: 15
+  - type: XenoHidden
