--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
@@ -120,10 +120,6 @@
     value: 0.7
   - type: TantrumSpeedBuff
   - type: XenoCruelty
-  - type: TacticalMapIcon
-    icon:
-      sprite: _RMC14/Interface/map_blips.rsi
-      state: ravager
 
 - type: entity
   parent: RMCXenoRavagerBase
@@ -164,6 +160,8 @@
   components:
   - type: Sprite
     sprite: _RMC14/Mobs/Xenonids/Ravager/berserker_ravager.rsi
+  - type: Xeno
+    role: CMXenoRavager
     actionIds:
     - ActionXenoRest
     - ActionXenoRegurgitate
@@ -173,7 +171,6 @@
     - ActionXenoClothesline
     - ActionXenoEviscerate
     - ActionXenoDevolve
-    hidden: true
   - type: MobThresholds
     thresholds:
       0: Alive
@@ -225,3 +222,4 @@
     damage:
       groups:
         Brute: 20
+  - type: XenoHidden
