--- a/Resources/Prototypes/_RMC14/Roles/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Loadouts/loadout_groups.yml
@@ -330,6 +330,7 @@
   name: rmc-loadout-group-synthetic-uniform
   minLimit: 1
   loadouts:
+  - SynthUniformRMC
   - ScrubsBlueRMC
   - ScrubsLightBlueRMC
   - ScrubsGreenRMC
