--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Corpses/civilians.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Corpses/civilians.yml
@@ -178,6 +178,7 @@
   equipment:
     jumpsuit: RMCJumpsuitMarshal
     back: CMSatchelSecurity
+    outerClothing: RMCCoatBureauDeputy
     shoes: CMBootsBlackFilled
     head: RMCHeadCapBureau
     eyes: CMGlassesSecurity
